--- a/HelloWorld/popup.html
+++ b/HelloWorld/popup.html
@@ -8,7 +8,14 @@
     
     </head>
 <body>
-	<img src="./image/logo.png" alt="">
+    <div id="logo">
+        <img src="./image/final logo2.png" alt="">
+    </div>
+    <div class="option">
+        <div class="btn-options">Email</div>
+        <div class="btn-options">Phone</div>
+
+    </div>
 	<form>
 		<span>username:</span> <input type="text" name="username"><br>
 		<span>password: </span><input type="password" name="password"><br>
