--- a/HelloWorld/popup.html
+++ b/HelloWorld/popup.html
@@ -5,20 +5,23 @@
 		  <link rel="stylesheet" type="text/css" href="extension.css">
 		  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr"
         crossorigin="anonymous">
-    
+          <script src="jquery-3.4.0.min.js"></script>
+        <script src="extension.js"></script>
+        
+  
     </head>
 <body>
     <div id="logo">
         <img src="./image/final logo2.png" alt="">
     </div>
     <div class="option">
-        <div class="btn-options">Email</div>
-        <div class="btn-options">Phone</div>
+        <div class="btn-options active" id="email">Email</div>
+        <div class="btn-options" id="phone">Phone</div>
 
     </div>
 	<form>
-		<span>username:</span> <input type="text" name="username"><br>
-		<span>password: </span><input type="password" name="password"><br>
+		<span>EMAIL:</span><br /> <input type="text" name="username"><br>
+		<span>PASSWORD: </span><br /><input type="password" name="password"><br>
   <div id="submit">Save Card</div>
 </form>
     <h2 id="first">Aapka swagat hai </h2>
