--- a/HelloWorld/popup.html
+++ b/HelloWorld/popup.html
@@ -10,27 +10,39 @@
         
   
     </head>
-<body>
-    <div id="logo">
-        <img src="./image/final logo2.png" alt="">
-    </div>
-    <div class="option">
-        <div class="btn-options active" id="email">Email</div>
-        <div class="btn-options" id="phone">Phone</div>
+    <body>
+        <div id="logo">
+            <img src="./image/final logo2.png" alt="">
+        </div>
+        <div class="option">
+            <div class="btn-options active" id="email">Email</div>
+            <div class="btn-options" id="phone">Phone</div>
 
-    </div>
-	<form>
-		<span>EMAIL:</span><br /> <input type="text" name="username"><br>
-		<span>PASSWORD: </span><br /><input type="password" name="password"><br>
-  <div id="submit">Save Card</div>
-</form>
-    <h2 id="first">Aapka swagat hai </h2>
-	<div id="footer">
-		<a href=""><i class="fab fa-facebook-f f"></i></a>
-        <a href=""><i class="fab fa-twitter t"></i></a>
-        <a href=""><i class="fab fa-google-plus-g g"></i></a>
-		<a href=""><i class="fab fa-pinterest p"></i></a>
-        <a href=""><i class="fab fa-linkedin-in l"></i></a>
-	</div>
-</body>
+        </div>
+        <br />
+        <form>
+            <span id="email">EMAIL</span><br /> <input type="text" name="username"><br><br />
+
+
+            <div class="OTP">
+                <input type="number" name="otp" placeholder="1" class="otp-input">
+                <input type="number" name="otp" placeholder="2" class="otp-input">
+                <input type="number" name="otp" placeholder="3" class="otp-input">
+                <input type="number" name="otp" placeholder="4" class="otp-input">
+                <br>
+            </div>
+            <div class="text_container" style="display:flex;justify-content:center">
+                <div><span>ONE TIME PASSWORD </span></div>
+            </div><br />
+            <div id="submit">Log In</div>
+        </form>
+        <h2 id="first">Aapka swagat hai </h2>
+        <div id="footer">
+            <a href=""><i class="fab fa-facebook-f f"></i></a>
+            <a href=""><i class="fab fa-twitter t"></i></a>
+            <a href=""><i class="fab fa-google-plus-g g"></i></a>
+            <a href=""><i class="fab fa-pinterest p"></i></a>
+            <a href=""><i class="fab fa-linkedin-in l"></i></a>
+        </div>
+    </body>
 </html>
