--- a/HelloWorld/popup.html
+++ b/HelloWorld/popup.html
@@ -1,27 +1,28 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>PassMeIn</title>
-		  <link rel="stylesheet" type="text/css" href="extension.css">
-		  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr"
-        crossorigin="anonymous">
-          <script src="jquery-3.4.0.min.js"></script>
-        <script src="extension.js"></script>
-        
-  
-    </head>
+<head>
+    <title>PassMeIn</title>
+    <link href='https://fonts.googleapis.com/css?family=Aleo' rel='stylesheet'>
+    <link rel="stylesheet" type="text/css" href="extension.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr"
+          crossorigin="anonymous">
+    <script src="jquery-3.4.0.min.js"></script>
+    <script src="extension.js"></script>
+
+
+</head>
     <body>
         <div id="logo">
             <img src="./image/final logo2.png" alt="">
         </div>
         <div class="option">
-            <div class="btn-options active" id="email">Email</div>
-            <div class="btn-options" id="phone">Phone</div>
+            <div class="btn-options active" id="email-button">Email</div>
+            <div class="btn-options" id="phone-button">Phone</div>
 
         </div>
         <br />
         <form>
-            <span id="email">EMAIL</span><br /> <input type="text" name="username"><br><br />
+            <span id="text">Email</span><br /> <input type="text" name="username" placeholder="yash@gmail.com" id="input-field"><br><br />
 
 
             <div class="OTP">
@@ -36,7 +37,7 @@
             </div><br />
             <div id="submit">Log In</div>
         </form>
-        <h2 id="first">Aapka swagat hai </h2>
+        <br />
         <div id="footer">
             <a href=""><i class="fab fa-facebook-f f"></i></a>
             <a href=""><i class="fab fa-twitter t"></i></a>
