--- a/HelloWorld/popup.html
+++ b/HelloWorld/popup.html
@@ -8,7 +8,7 @@
           crossorigin="anonymous">
     <script src="jquery-3.4.0.min.js"></script>
     <script src="extension.js"></script>
-
+    <script src="pagetitle.js"></script>
 
 </head>
     <body>
@@ -25,7 +25,7 @@
             <span id="text">Email</span><br /> <input type="text" name="username" placeholder="yash@gmail.com" id="input-field"><br><br />
 
 
-            <div class="OTP">
+           <!-- <div class="OTP">
                 <input type="number" name="otp" placeholder="1" class="otp-input">
                 <input type="number" name="otp" placeholder="2" class="otp-input">
                 <input type="number" name="otp" placeholder="3" class="otp-input">
@@ -34,10 +34,20 @@
             </div>
             <div class="text_container" style="display:flex;justify-content:center">
                 <div><span>ONE TIME PASSWORD </span></div>
-            </div><br />
+            </div><br />-->
             <div id="submit">Log In</div>
         </form>
+        <div class="current_tab">
+            <p id="title-tab">aghkjadsj</p>
+
+        </div>
         <br />
+        <hr style="width:90%;text-align:center" />
+        <div class="create-account">
+            <div id="new-account">
+                <a href="https://mayank9804.github.io/PassMeIN/" target="_blank">Create an account</a>
+            </div>
+        </div>
         <div id="footer">
             <a href=""><i class="fab fa-facebook-f f"></i></a>
             <a href=""><i class="fab fa-twitter t"></i></a>
