--- a/HelloWorld/popup.html
+++ b/HelloWorld/popup.html
@@ -38,7 +38,7 @@
             <div id="submit">Log In</div>
         </form>
         <div class="current_tab">
-            <p id="title-tab">aghkjadsj</p>
+            <p id="title-tab"></p>
 
         </div>
         <br />
