--- a/HelloWorld/popup.html
+++ b/HelloWorld/popup.html
@@ -11,49 +11,49 @@
     <script src="pagetitle.js"></script>
 
 </head>
-    <body>
-        <div id="logo">
-            <img src="./image/final logo2.png" alt="">
-        </div>
-        <div class="option">
-            <div class="btn-options active" id="email-button">Email</div>
-            <div class="btn-options" id="phone-button">Phone</div>
+<body>
+    <div id="logo">
+        <img src="./image/final logo2.png" alt="">
+    </div>
+    <div class="option">
+        <div class="btn-options active" id="email-button">Email</div>
+        <div class="btn-options" id="phone-button">Phone</div>
 
-        </div>
-        <br />
-        <form>
-            <span id="text">Email</span><br /> <input type="text" name="username" placeholder="yash@gmail.com" id="input-field"><br><br />
+    </div>
+    <br />
+    <form>
+        <span id="text">Email</span><br /> <input type="text" name="username" placeholder="yash@gmail.com" id="input-field"><br><br />
 
 
-           <!-- <div class="OTP">
-                <input type="number" name="otp" placeholder="1" class="otp-input">
-                <input type="number" name="otp" placeholder="2" class="otp-input">
-                <input type="number" name="otp" placeholder="3" class="otp-input">
-                <input type="number" name="otp" placeholder="4" class="otp-input">
-                <br>
-            </div>
-            <div class="text_container" style="display:flex;justify-content:center">
-                <div><span>ONE TIME PASSWORD </span></div>
-            </div><br />-->
-            <div id="submit">Log In</div>
-        </form>
-        <div class="current_tab">
-            <p id="title-tab"></p>
+        <!-- <div class="OTP">
+             <input type="number" name="otp" placeholder="1" class="otp-input">
+             <input type="number" name="otp" placeholder="2" class="otp-input">
+             <input type="number" name="otp" placeholder="3" class="otp-input">
+             <input type="number" name="otp" placeholder="4" class="otp-input">
+             <br>
+         </div>
+         <div class="text_container" style="display:flex;justify-content:center">
+             <div><span>ONE TIME PASSWORD </span></div>
+         </div><br />-->
+        <div id="submit">Log In</div>
+    </form>
+    <!--<div class="current_tab">
+        <p id="title-tab"></p>
 
+    </div>-->
+    <br />
+    <hr style="width:90%;text-align:center" />
+    <div class="create-account">
+        <div id="new-account">
+            <a href="https://mayank9804.github.io/PassMeIN/" target="_blank">Create an account</a>
         </div>
-        <br />
-        <hr style="width:90%;text-align:center" />
-        <div class="create-account">
-            <div id="new-account">
-                <a href="https://mayank9804.github.io/PassMeIN/" target="_blank">Create an account</a>
-            </div>
-        </div>
-        <div id="footer">
-            <a href=""><i class="fab fa-facebook-f f"></i></a>
-            <a href=""><i class="fab fa-twitter t"></i></a>
-            <a href=""><i class="fab fa-google-plus-g g"></i></a>
-            <a href=""><i class="fab fa-pinterest p"></i></a>
-            <a href=""><i class="fab fa-linkedin-in l"></i></a>
-        </div>
-    </body>
+    </div>
+    <div id="footer">
+        <a href=""><i class="fab fa-facebook-f f"></i></a>
+        <a href=""><i class="fab fa-twitter t"></i></a>
+        <a href=""><i class="fab fa-google-plus-g g"></i></a>
+        <a href=""><i class="fab fa-pinterest p"></i></a>
+        <a href=""><i class="fab fa-linkedin-in l"></i></a>
+    </div>
+</body>
 </html>
