--- a/HelloWorld/popup.html
+++ b/HelloWorld/popup.html
@@ -8,7 +8,7 @@
           crossorigin="anonymous">
     <script src="jquery-3.4.0.min.js"></script>
     <script src="extension.js"></script>
-    <script src="pagetitle.js"></script>
+    
 
 </head>
 <body>
@@ -37,6 +37,9 @@
          </div><br />-->
         <div id="submit">Log In</div>
     </form>
+    <div id="count_down">
+        &nbsp;
+    </div>
     <!--<div class="current_tab">
         <p id="title-tab"></p>
 
